Fixed url for font files

--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url('../assets/fonts/KumbhSans-VariableFont_YOPQ,wght.woff2')
+  src: url('assets/fonts/KumbhSans-VariableFont_YOPQ,wght.woff2')
     format('woff2');
 }
 
@@ -45,7 +45,7 @@
   font-style: normal;
   font-weight: 700;
   font-display: swap;
-  src: url('../assets/fonts/KumbhSans-VariableFont_YOPQ,wght.woff2')
+  src: url('assets/fonts/KumbhSans-VariableFont_YOPQ,wght.woff2')
     format('woff2');
 }
 
@@ -54,7 +54,7 @@
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url('../assets/fonts/SpaceMono-Regular.woff2') format('woff2');
+  src: url('assets/fonts/SpaceMono-Regular.woff2') format('woff2');
 }
 
 @font-face {
@@ -62,7 +62,7 @@
   font-style: normal;
   font-weight: 700;
   font-display: swap;
-  src: url('../assets/fonts/SpaceMono-Bold.woff2') format('woff2');
+  src: url('assets/fonts/SpaceMono-Bold.woff2') format('woff2');
 }
 
 @font-face {
@@ -70,7 +70,7 @@
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url('../assets/fonts/RobotoSlab-VariableFont_wght.woff2') format('woff2');
+  src: url('assets/fonts/RobotoSlab-VariableFont_wght.woff2') format('woff2');
 }
 
 @font-face {
@@ -78,7 +78,7 @@
   font-style: normal;
   font-weight: 700;
   font-display: swap;
-  src: url('../assets/fonts/RobotoSlab-VariableFont_wght.woff2') format('woff2');
+  src: url('assets/fonts/RobotoSlab-VariableFont_wght.woff2') format('woff2');
 }
 
 /* -------------------- */
